[package]
name = "jf-vrf"
version = "0.3.0"
description = "Verifiable random function."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = ["ark-std/std", "digest/std", "jf-signature/std", "zeroize/std"]
parallel = ["jf-signature/parallel"]

[dependencies]
ark-std = { workspace = true }
digest = { version = "0.10.1", default-features = false, features = ["alloc"] }
displaydoc = { workspace = true }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.3.0", default-features = false, features = ["bls"] }
serde = { workspace = true }
sha2 = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
jf-utils = { path = "../utilities", default-features = false }
