[package]
name = "jf_merkle_tree"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
derivative = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
itertools = { workspace = true }
jf-primitives-core = { path = "../core", default-features = false }
jf-rescue = { path = "../rescue", default-features = false }
jf-utils = { path = "../../utilities", default-features = false }
jf-relation = { path = "../../relation", optional = true, default-features = false }
tagged-base64 = { workspace = true }

[dev-dependencies]
bincode = "1.3"
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"

[features]
default = []
std = [
        "ark-bls12-377/std",
        "ark-bls12-381/std",
        "ark-bn254/std",
        "ark-std/std",
        "ark-serialize/std",
        "ark-ff/std",
        "num-bigint/std",
        "num-traits/std",
        "sha3/std",
        "itertools/use_std",
        "jf-utils/std",
        "jf-relation/std",
        "jf-primitives-core/std",
]
gadgets = [
    "jf-relation",
    "jf-rescue/gadgets",
]
