[package]
name = "jf-vdf"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-pallas = "0.4.0"
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
displaydoc = { workspace = true }
jf-utils = { path = "../../utilities", default-features = false }
jf-primitives-core = { path = "../core", default-features = false }

[features]
default = []
std = [
    "ark-pallas/std", "ark-bls12-381/std", "ark-bn254/std", "ark-std/std",
    "ark-ff/std", "ark-ec/std", "jf-utils/std", "jf-primitives-core/std"
]